--- a/car-service/pom.xml
+++ b/car-service/pom.xml
@@ -35,6 +35,11 @@
 			<artifactId>spring-cloud-starter-bootstrap</artifactId>
 			<version>4.0.2</version>
 		</dependency>
+		<dependency>
+			<groupId>org.springframework.cloud</groupId>
+			<artifactId>spring-cloud-starter-netflix-eureka-client</artifactId>
+		</dependency>
+
 
 		<dependency>
 			<groupId>com.h2database</groupId>
